--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,4 @@
-<section class="gallery" id="mainpage-section-gallery">
-    <div class="container">
+<section class="gallery container" id="mainpage-section-gallery">
         <div class="gallery_wrap">
             <h3 class="gallery_menu">Breathe in the Space</h3>
             <p class="gallery_text">
