--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -11,26 +11,26 @@
           <source
             media="(min-width: 1440px)"
             srcset="
-              /img/team/desk/liamjohnson-desk1x.jpg 1x,
-              /img/team/desk/liamjohnson-desk2x.jpg 2x
+              /img/team/desk/liamjohnson-desk1x.png 1x,
+              /img/team/desk/liamjohnson-desk2x.png 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              /img/team/tab/liamjohnson-tab1x.jpg 1x,
-              /img/team/tab/liamjohnson-tab2x.jpg 2x
+              /img/team/tab/liamjohnson-tab1x.png 1x,
+              /img/team/tab/liamjohnson-tab2x.png 2x
             "
           />
           <source
             media="(max-width: 375px)"
             srcset="
-              /img/team/mob/liamjohnson1x.jpg 1x,
-              /img/team/mob/liamjohnson2x.jpg 2x
+              /img/team/mob/liamjohnson1x.png 1x,
+              /img/team/mob/liamjohnson2x.png 2x
             "
           />
           <img
-            src="/img/team/desk/liamjohnson-desk1x.jpg"
+            src="/img/team/desk/liamjohnson-desk1x.png"
             alt="Liam Johnson"
             class="team-image"
           />
@@ -49,6 +49,8 @@
               <a
                 class="team-soc-link"
                 href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
+                target="_blank"
+                rel="noopener noreferrer"
               >
                 <svg class="icon-soc" width="24" height="24">
                   <use href="/img/icons.svg#icon-linkedIn"></use>
@@ -60,6 +62,8 @@
               <a
                 class="team-soc-link"
                 href="https://www.instagram.com/goitclub/"
+                target="_blank"
+                rel="noopener noreferrer"
               >
                 <svg class="icon-soc" width="24" height="24">
                   <use href="/img/icons.svg#icon-instagram"></use>
@@ -75,26 +79,26 @@
           <source
             media="(min-width: 1440px)"
             srcset="
-              /img/team/desk/emmastone-desk1x.jpg 1x,
-              /img/team/desk/emmastone-desk2x.jpg 2x
+              /img/team/desk/emmastone-desk1x.png 1x,
+              /img/team/desk/emmastone-desk2x.png 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              /img/team/tab/emmastone-tab1x.jpg 1x,
-              /img/team/tab/emmastone-tab2x.jpg 2x
+              /img/team/tab/emmastone-tab1x.png 1x,
+              /img/team/tab/emmastone-tab2x.png 2x
             "
           />
           <source
             media="(max-width: 375px)"
             srcset="
-              /img/team/mob/emmastone1x.jpg 1x,
-              /img/team/mob/emmastone2x.jpg 2x
+              /img/team/mob/emmastone1x.png 1x,
+              /img/team/mob/emmastone2x.png 2x
             "
           />
           <img
-            src="/img/team/desk/emmastone-desk1x.jpg"
+            src="/img/team/desk/emmastone-desk1x.png"
             alt="Emma Stone"
             class="team-image"
           />
@@ -114,6 +118,8 @@
               <a
                 class="team-soc-link"
                 href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
+                target="_blank"
+                rel="noopener noreferrer"
               >
                 <svg class="icon-soc" width="24" height="24">
                   <use href="/img/icons.svg#icon-linkedIn"></use>
@@ -128,26 +134,26 @@
           <source
             media="(min-width: 1440px)"
             srcset="
-              /img/team/desk/sophialee-desk1x.jpg 1x,
-              /img/team/desk/sophialee-desk2x.jpg 2x
+              /img/team/desk/sophialee-desk1x.png 1x,
+              /img/team/desk/sophialee-desk2x.png 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              /img/team/tab/sophialee-tab1x.jpg 1x,
-              /img/team/tab/sophialee-tab2x.jpg 2x
+              /img/team/tab/sophialee-tab1x.png 1x,
+              /img/team/tab/sophialee-tab2x.png 2x
             "
           />
           <source
             media="(max-width: 375px)"
             srcset="
-              /img/team/mob/sophialee1x.jpg 1x,
-              /img/team/mob/sophialee2x.jpg 2x
+              /img/team/mob/sophialee1x.png 1x,
+              /img/team/mob/sophialee2x.png 2x
             "
           />
           <img
-            src="/img/team/desk/sophialee-desk1x.jpg"
+            src="/img/team/desk/sophialee-desk1x.png"
             alt="Sophia Lee"
             class="team-image"
           />
@@ -166,6 +172,8 @@
               <a
                 class="team-soc-link"
                 href="https://www.instagram.com/goitclub/"
+                target="_blank"
+                rel="noopener noreferrer"
               >
                 <svg class="icon-soc" width="24" height="24">
                   <use href="/img/icons.svg#icon-instagram"></use>
@@ -180,26 +188,26 @@
           <source
             media="(min-width: 1440px)"
             srcset="
-              /img/team/desk/noahbrown-desk1x.jpg 1x,
-              /img/team/desk/noahbrown-desk2x.jpg 2x
+              /img/team/desk/noahbrown-desk1x.png 1x,
+              /img/team/desk/noahbrown-desk2x.png 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              /img/team/tab/noahbrown-tab1x.jpg 1x,
-              /img/team/tab/noahbrown-tab2x.jpg 2x
+              /img/team/tab/noahbrown-tab1x.png 1x,
+              /img/team/tab/noahbrown-tab2x.png 2x
             "
           />
           <source
             media="(max-width: 375px)"
             srcset="
-              /img/team/mob/noahbrown1x.jpg 1x,
-              /img/team/mob/noahbrown2x.jpg 2x
+              /img/team/mob/noahbrown1x.png 1x,
+              /img/team/mob/noahbrown2x.png 2x
             "
           />
           <img
-            src="/img/team/desk/noahbrown-desk1x.jpg"
+            src="/img/team/desk/noahbrown-desk1x.png"
             alt="Noah Brown"
             class="team-image"
           />
@@ -219,6 +227,8 @@
               <a
                 class="team-soc-link"
                 href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
+                target="_blank"
+                rel="noopener noreferrer"
               >
                 <svg class="icon-soc" width="24" height="24">
                   <use href="/img/icons.svg#icon-linkedIn"></use>
@@ -233,26 +243,26 @@
           <source
             media="(min-width: 1440px)"
             srcset="
-              /img/team/desk/avagreen-desk1x.jpg 1x,
-              /img/team/desk/avagreen-desk2x.jpg 2x
+              /img/team/desk/avagreen-desk1x.png 1x,
+              /img/team/desk/avagreen-desk2x.png 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              /img/team/tab/avagreen-tab1x.jpg 1x,
-              /img/team/tab/avagreen-tab2x.jpg 2x
+              /img/team/tab/avagreen-tab1x.png 1x,
+              /img/team/tab/avagreen-tab2x.png 2x
             "
           />
           <source
             media="(max-width: 375px)"
             srcset="
-              /img/team/mob/avagreen1x.jpg 1x,
-              /img/team/mob/avagreen2x.jpg 2x
+              /img/team/mob/avagreen1x.png 1x,
+              /img/team/mob/avagreen2x.png 2x
             "
           />
           <img
-            src="/img/team/desk/avagreen-desk1x.jpg"
+            src="/img/team/desk/avagreen-desk1x.png"
             alt="Ava Green"
             class="team-image"
           />
@@ -272,6 +282,8 @@
               <a
                 class="team-soc-link"
                 href="https://www.facebook.com/goITclub/"
+                target="_blank"
+                rel="noopener noreferrer"
               >
                 <svg class="icon-soc" width="24" height="24">
                   <use href="/img/icons.svg#icon-facebook"></use>
@@ -282,6 +294,8 @@
               <a
                 class="team-soc-link"
                 href="https://www.instagram.com/goitclub/"
+                target="_blank"
+                rel="noopener noreferrer"
               >
                 <svg class="icon-soc" width="24" height="24">
                   <use href="/img/icons.svg#icon-instagram"></use>
@@ -292,6 +306,8 @@
               <a
                 class="team-soc-link"
                 href="https://www.linkedin.com/school/goit-start-your-career-in-it/"
+                target="_blank"
+                rel="noopener noreferrer"
               >
                 <svg class="icon-soc" width="24" height="24">
                   <use href="/img/icons.svg#icon-linkedIn"></use>
@@ -306,26 +322,26 @@
           <source
             media="(min-width: 1440px)"
             srcset="
-              /img/team/desk/clarkthomas-desk1x.jpg 1x,
-              /img/team/desk/clarkthomas-desk2x.jpg 2x
+              /img/team/desk/clarkthomas-desk1x.png 1x,
+              /img/team/desk/clarkthomas-desk2x.png 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              /img/team/tab/clarkthomas-tab1x.jpg 1x,
-              /img/team/tab/clarkthomas-tab2x.jpg 2x
+              /img/team/tab/clarkthomas-tab1x.png 1x,
+              /img/team/tab/clarkthomas-tab2x.png 2x
             "
           />
           <source
             media="(max-width: 375px)"
             srcset="
-              /img/team/mob/clarkthomas1x.jpg 1x,
-              /img/team/mob/clarkthomas2x.jpg 2x
+              /img/team/mob/clarkthomas1x.png 1x,
+              /img/team/mob/clarkthomas2x.png 2x
             "
           />
           <img
-            src="/img/team/desk/clarkthomas-desk1x.jpg"
+            src="/img/team/desk/clarkthomas-desk1x.png"
             alt="Clark Thomas"
             class="team-image"
           />
@@ -344,6 +360,8 @@
               <a
                 class="team-soc-link"
                 href="https://www.facebook.com/goITclub/"
+                target="_blank"
+                rel="noopener noreferrer"
               >
                 <svg class="icon-soc" width="24" height="24">
                   <use href="/img/icons.svg#icon-facebook"></use>
@@ -354,6 +372,8 @@
               <a
                 class="team-soc-link"
                 href="https://www.instagram.com/goitclub/"
+                target="_blank"
+                rel="noopener noreferrer"
               >
                 <svg class="icon-soc" width="24" height="24">
                   <use href="/img/icons.svg#icon-instagram"></use>
