--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,60 @@
-<header class="header"></header>
+<header class="header">
+    <div class="header-container">
+      <button type="button" class="header-button-menu">
+         <svg class="header-menu-icon" width="24" height="24">
+            <use href="../public/icons.svg#icon-menu"></use>
+         </svg>
+      </button>
+      <nav class="header-nav">
+        <ul class="header-ul">
+          <li><a href="#yoga-classes" class="nav-link-header current">Yoga Classes</a></li> 
+          <li><a href="#team" class="nav-link-header">Team</a></li>
+          <li><a href="#testimonials" class="nav-link-header">Testimonials</a></li> 
+          <li><a href="#pricing" class="nav-link-header">Pricing</a></li> 
+          <li><a href="#footer" class="nav-link-header">Contacts</a></li> 
+        </ul>
+      </nav>  
+           <svg class="header-logo" width="84" height="36">
+                <use href="../public/icons.svg#icon-logo"></use>
+           </svg>
+         <div>
+            <a href="#pricing" class="my-button">Join<span class="my-button-span">Now</span></a>
+         </div>
+          
+    </div>
+
+<!-- mobile -->
+
+   <div class="modal-backdrop">
+        <div class="modal-div">
+          <div class="header-modal">
+            <button type="button" class="modal-close-btn">
+             <svg class="modal-close-icon" width="24" height="24">
+               <use href="../public/icons.svg#icon-cross"></use>
+             </svg>
+           </button>
+            
+           <svg class="header-logo" width="84" height="36">
+                <use href="../public/icons.svg#icon-logo"></use>
+           </svg>
+             <div>
+                <a href="#pricing" class="my-button">Join<span class="my-button-span">Now</span> </a>
+             </div>
+         </div>
+             <nav class="header-nav-modal">
+               <ul>
+                  <li><a href="#yoga-classes" class="nav-link-modal current">Yoga Classes</a></li> 
+                  <li><a href="#team" class="nav-link-modal">Team</a></li>
+                  <li><a href="#testimonials" class="nav-link-modal">Testimonials</a></li> 
+                  <li><a href="#pricing" class="nav-link-modal">Pricing</a></li> 
+                  <li><a href="#footer" class="nav-link-modal">Contacts</a></li> 
+               </ul>
+             </nav>  
+            <div class="header-button-pricing">
+                <a href="#pricing" class="my-button-modal">Join Now</a>
+            </div>
+           
+        </div>
+   </div>
+</header>
+
