--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -35,12 +35,12 @@
         <li class="footer-nav-item">
           <a href="#yoga-classes"></a>Yoga Classes
         </li>
-        <li class="footer-nav-item"><a href="#team"></a>Team</li>
-        <li class="footer-nav-item"><a href="#pricing"></a>Pricing</li>
-        <li class="footer-nav-item"><a href="#contacts"></a>Contacts</li>
+        <li class="footer-nav-item"><a href="#team">Team</a></li>
+        <li class="footer-nav-item"><a href="#pricing">Pricing</a></li>
+        <li class="footer-nav-item"><a href="#contacts">Contacts</a></li>
       </ul>
     </div>
-    <div class="third-block">
+    <div class="third-block" id="contacts">
       <h3 class="footer-socials-header">Connect With Us</h3>
       <ul class="footer-socials">
         <li class="footer-socials-item">
@@ -51,7 +51,7 @@
           >
             <div class="footer-socials-icon-with-text">
               <svg width="24" height="24" class="footer-socials-item-icon">
-                <use href="/img/icons.svg#icon-Facebook"></use>
+                <use href="/img/icons.svg#icon-facebook"></use>
               </svg>
               <p class="footer-socials-item-text">Facebook</p>
             </div>
@@ -65,7 +65,7 @@
           >
             <div class="footer-socials-icon-with-text">
               <svg width="24" height="24" class="footer-socials-item-icon">
-                <use href="/img/icons.svg#icon-Instagram"></use>
+                <use href="/img/icons.svg#icon-instagram"></use>
               </svg>
               <p class="footer-socials-item-text">Instagram</p>
             </div>
@@ -79,7 +79,7 @@
           >
             <div class="footer-socials-icon-with-text">
               <svg width="24" height="24" class="footer-socials-item-icon">
-                <use href="/img/icons.svg#icon-LinkedIn"></use>
+                <use href="/img/icons.svg#icon-linkedIn"></use>
               </svg>
               <p class="footer-socials-item-text">LinkedIn</p>
             </div>
@@ -93,7 +93,7 @@
           >
             <div class="footer-socials-icon-with-text">
               <svg width="24" height="24" class="footer-socials-item-icon">
-                <use href="/img/icons.svg#icon-Youtube"></use>
+                <use href="/img/icons.svg#icon-youtube"></use>
               </svg>
               <p class="footer-socials-item-text">YouTube</p>
             </div>
