--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,5 +1,5 @@
-<section class="team container" id="team">
-  <div class="">
+<section class="team" id="team">
+  <div class="container">
     <h3 class="team-text-top">Meet</h3>
     <h2 class="team-title">Our Team</h2>
     <h4 class="team-text">
