fixed anchor link to yoga-classes section

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -34,7 +34,7 @@
         <h3 class="footer-nav-header">Quick Links</h3>
         <ul class="footer-nav">
           <li class="footer-nav-item">
-            <a href="#yoga-classes"></a>Yoga Classes
+            <a href="#yoga-classes">Yoga Classes</a>
           </li>
           <li class="footer-nav-item"><a href="#team">Team</a></li>
           <li class="footer-nav-item"><a href="#pricing">Pricing</a></li>
