--- a/src/partials/yoga-classes.html
+++ b/src/partials/yoga-classes.html
@@ -1,4 +1,4 @@
-<section class="yoga-classes">
+<section class="yoga-classes" id="yoga-classes">
   <div class="container yoga-container">
     <div class="yoga-section">
       <p class="yoga-txt">Explore</p>
