--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -85,8 +85,11 @@
     gap: 24px;
     justify-content: flex-start;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     list-style: none;
+
+    max-width: 1440px;
+    padding: 0 40px;
 }
 
 
