--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -15,7 +15,7 @@
           </p>
           <div class="testimonials-avatar">
             <img
-              src="../img/testimonials/testimonials-1.jpg"
+              src="/img/testimonials/testimonials-1.jpg"
               alt="Donna Norman"
               class="testimonials-list-item-image"
               width="56"
@@ -35,7 +35,7 @@
           </p>
           <div class="testimonials-avatar">
             <img
-              src="../img/testimonials/testimonials-2.jpg"
+              src="/img/testimonials/testimonials-2.jpg"
               alt="Sophie Delgado"
               class="testimonials-list-item-image"
               width="56"
@@ -57,7 +57,7 @@
           </p>
           <div class="testimonials-avatar">
             <img
-              src="../img/testimonials/testimonials-3.jpg"
+              src="/img/testimonials/testimonials-3.jpg"
               alt="Rachel Kimura"
               class="testimonials-list-item-image"
               width="56"
@@ -79,7 +79,7 @@
           </p>
           <div class="testimonials-avatar">
             <img
-              src="../img/testimonials/testimonials-4.jpg"
+              src="/img/testimonials/testimonials-4.jpg"
               alt="Emma L. Hart"
               class="testimonials-list-item-image"
               width="56"
