--- a/src/partials/yoga-classes.html
+++ b/src/partials/yoga-classes.html
@@ -18,27 +18,27 @@
           <source
             media="(min-width: 1336px)"
             srcset="
-              ../img/yoga-classes/Yogaclas-desc1-min.jpg    1x,
-              ../img/yoga-classes/Yogaclas-desc1@2x-min.jpg 2x
+              /img/yoga-classes/Yogaclas-desc1-min.jpg    1x,
+              /img/yoga-classes/Yogaclas-desc1@2x-min.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              ../img/yoga-classes/Yogaclas-tab1-min.jpg    1x,
-              ../img/yoga-classes/Yogaclas-tab1@2x-min.jpg 2x
+              /img/yoga-classes/Yogaclas-tab1-min.jpg    1x,
+              /img/yoga-classes/Yogaclas-tab1@2x-min.jpg 2x
             "
           />
           <source
             media="(max-width: 767px)"
             srcset="
-              ../img/yoga-classes/Yogaclas-mob1-min.jpg    1x,
-              ../img/yoga-classes/Yogaclas-mob1@2x-min.jpg 2x
+              /img/yoga-classes/Yogaclas-mob1-min.jpg    1x,
+              /img/yoga-classes/Yogaclas-mob1@2x-min.jpg 2x
             "
           />
           <img
             class="yoga-foto"
-            src="../img/yoga-classes/Yogaclas-desc1-min.jpg"
+            src="/img/yoga-classes/Yogaclas-desc1-min.jpg"
             alt="Beginner Yoga"
           />
         </picture>
@@ -57,27 +57,27 @@
           <source
             media="(min-width: 1336px)"
             srcset="
-              ../img/yoga-classes/Yogaclas-desc1-min.jpg    1x,
-              ../img/yoga-classes/Yogaclas-desc2@2x-min.jpg 2x
+              /img/yoga-classes/Yogaclas-desc1-min.jpg    1x,
+              /img/yoga-classes/Yogaclas-desc2@2x-min.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              ../img/yoga-classes/Yogaclas-tab2-min.jpg    1x,
-              ../img/yoga-classes/Yogaclas-tab2@2x-min.jpg 2x
+              /img/yoga-classes/Yogaclas-tab2-min.jpg    1x,
+              /img/yoga-classes/Yogaclas-tab2@2x-min.jpg 2x
             "
           />
           <source
             media="(max-width: 767px)"
             srcset="
-              ../img/yoga-classes/Yogaclas-mob2-min.jpg    1x,
-              ../img/yoga-classes/Yogaclas-mob2@2x-min.jpg 2x
+              /img/yoga-classes/Yogaclas-mob2-min.jpg    1x,
+              /img/yoga-classes/Yogaclas-mob2@2x-min.jpg 2x
             "
           />
           <img
             class="yoga-foto"
-            src="../img/yoga-classes/Yogaclas-desc2-min.jpg"
+            src="/img/yoga-classes/Yogaclas-desc2-min.jpg"
             alt="Vinyasa Flow"
           />
         </picture>
@@ -98,27 +98,27 @@
           <source
             media="(min-width: 1336px)"
             srcset="
-              ../img/yoga-classes/Yogaclas-desc3-min.jpg    1x,
-              ../img/yoga-classes/Yogaclas-desc3@2x-min.jpg 2x
+              /img/yoga-classes/Yogaclas-desc3-min.jpg    1x,
+              /img/yoga-classes/Yogaclas-desc3@2x-min.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              ../img/yoga-classes/Yogaclas-tab3-min.jpg    1x,
-              ../img/yoga-classes/Yogaclas-tab3@2x-min.jpg 2x
+              /img/yoga-classes/Yogaclas-tab3-min.jpg    1x,
+              /img/yoga-classes/Yogaclas-tab3@2x-min.jpg 2x
             "
           />
           <source
             media="(max-width: 767px)"
             srcset="
-              ../img/yoga-classes/Yogaclas-mob3-min.jpg    1x,
-              ../img/yoga-classes/Yogaclas-mob3@2x-min.jpg 2x
+              /img/yoga-classes/Yogaclas-mob3-min.jpg    1x,
+              /img/yoga-classes/Yogaclas-mob3@2x-min.jpg 2x
             "
           />
           <img
             class="yoga-foto"
-            src="../img/yoga-classes/Yogaclas-desc3-min.jpg"
+            src="/img/yoga-classes/Yogaclas-desc3-min.jpg"
             alt="Restorative"
           />
         </picture>
