modal window added

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,11 +1,6 @@
-<div class="modal-overlay is-open">
+<div class="modal-overlay">
   <div class="modal">
-    <button
-      class="close-btn"
-      onclick="document.querySelector('.modal-overlay').style.display='none'"
-    >
-      ×
-    </button>
+    <button data-menu-close class="close-btn">×</button>
     <h2 class="modal-title">Join Now!</h2>
     <p class="modal-text">One Session</p>
     <div class="price">$10</div>
@@ -45,14 +40,9 @@
   </div>
 </div>
 
-<div class="modal-overlay is-open">
+<div class="modal-overlay">
   <div class="modal">
-    <button
-      class="close-btn"
-      onclick="document.querySelector('.modal-overlay').style.display='none'"
-    >
-      ×
-    </button>
+    <button data-menu-close class="close-btn">×</button>
     <h2 class="modal-title">Join Now!</h2>
     <p class="modal-text">8 Sessions Package</p>
     <div class="price">$65</div>
@@ -92,16 +82,11 @@
   </div>
 </div>
 
-<div class="modal-overlay is-open">
+<div class="modal-overlay">
   <div class="modal">
-    <button
-      class="close-btn"
-      onclick="document.querySelector('.modal-overlay').style.display='none'"
-    >
-      ×
-    </button>
+    <button data-menu-close class="close-btn">×</button>
     <h2 class="modal-title">Join Now!</h2>
-    <p class="modal-text">812 Sessions Package</p>
+    <p class="modal-text">12 Sessions Package</p>
     <div class="price">$80</div>
     <form>
       <div class="form-row">
