--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -8,11 +8,7 @@ body {
   margin: 0;
   background: rgba(0, 0, 0, 0.5);
 }
-.modal-overlay.is-open {
-  opacity: 1;
-  pointer-events: auto;
-  visibility: visible;
-}
+
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -22,7 +18,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: rgba(0, 0, 0, 0.25);
   z-index: 1000;
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal-overlay.is-open {
+  opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
 }
 
 .modal {
@@ -183,8 +189,6 @@ form {
   }
 
   form {
-    width: 520px;
-    height: 246px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -206,5 +210,18 @@ form {
     border-radius: 100px;
     font-size: 16px;
     align-self: center;
+  }
+}
+
+@media (min-width: 1336px) {
+  .modal {
+    width: 768px;
+    height: 573px;
+    padding: 64px 92px;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
   }
 }
