added basic js to modal overlays

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -41,9 +41,12 @@
           </svg>
         </button>
 
-        <svg class="header-logo" width="84" height="36">
-          <use href="/img/icons.svg#icon-logo"></use>
-        </svg>
+        <a href="/index.html" class="header-logo-link">
+          <svg class="header-logo" width="84" height="36">
+            <use href="/img/icons.svg#icon-logo"></use>
+          </svg>
+        </a>
+
         <div>
           <a href="#pricing" class="my-button"
             >Join<span class="my-button-span">Now</span>
