--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,4 @@
-<div class="modal-overlay">
+<div class="modal-overlay" data-modal="1">
   <div class="modal">
     <button data-menu-close class="close-btn">×</button>
     <h2 class="modal-title">Join Now!</h2>
@@ -40,7 +40,7 @@
   </div>
 </div>
 
-<div class="modal-overlay">
+<div class="modal-overlay" data-modal="8">
   <div class="modal">
     <button data-menu-close class="close-btn">×</button>
     <h2 class="modal-title">Join Now!</h2>
@@ -82,7 +82,7 @@
   </div>
 </div>
 
-<div class="modal-overlay">
+<div class="modal-overlay" data-modal="12">
   <div class="modal">
     <button data-menu-close class="close-btn">×</button>
     <h2 class="modal-title">Join Now!</h2>
