--- a/src/partials/pricing.html
+++ b/src/partials/pricing.html
@@ -47,7 +47,14 @@
             <span class="pricing-card-content">Community support group</span>
           </li>
         </ul>
-        <button class="button-join" type="button" data-menu-open>Join</button>
+        <button
+          class="button-join"
+          type="button"
+          data-menu-open
+          data-package="1"
+        >
+          Join
+        </button>
       </li>
 
       <li class="pricing-card">
@@ -89,7 +96,14 @@
             <span class="pricing-card-content">Community support group</span>
           </li>
         </ul>
-        <button class="button-join" type="button" data-menu-open>Join</button>
+        <button
+          class="button-join"
+          type="button"
+          data-menu-open
+          data-package="8"
+        >
+          Join
+        </button>
       </li>
       <li class="pricing-card">
         <h3 class="pricing-card-title">12 Sessions Package</h3>
@@ -152,7 +166,14 @@
             <span class="pricing-card-content">Community support group</span>
           </li>
         </ul>
-        <button class="button-join" type="button" data-menu-open>Join</button>
+        <button
+          class="button-join"
+          type="button"
+          data-menu-open
+          data-package="12"
+        >
+          Join
+        </button>
       </li>
     </ul>
   </div>
